configured iOS controllers and navigation appearance

--- a/ProjectOnlineMobile2.iOS/Main.storyboard
+++ b/ProjectOnlineMobile2.iOS/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController" useStoryboardIdentifierAsRestorationIdentifier="YES" storyboardIdentifier="ViewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -30,6 +30,7 @@
                     </view>
                     <connections>
                         <outlet property="webView" destination="1570" id="name-outlet-1570"/>
+                        <outlet property="LoginViewController" destination="8bC-Xf-vdC" id="name-outlet-8bC-Xf-vdC"/>
                     </connections>
                     <navigationItem title="Title" id="5193" key="navigationItem"/>
                 </viewController>
@@ -37,23 +38,33 @@
             </objects>
             <point key="canvasLocation" x="-203" y="22"/>
         </scene>
-        <scene sceneID="4004">
+        <scene sceneID="5650">
             <objects>
-                <viewController id="4005" sceneMemberID="viewController">
+                <viewController id="5651" sceneMemberID="viewController" customClass="HomeController" storyboardIdentifier="HomeController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4002"/>
-                        <viewControllerLayoutGuide type="bottom" id="4003"/>
+                        <viewControllerLayoutGuide type="top" id="5648"/>
+                        <viewControllerLayoutGuide type="bottom" id="5649"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="4006" customClass="LandingPageController">
+                    <view key="view" contentMode="scaleToFill" id="5652">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="12031" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="126" y="216" width="147" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Go to Page 1"/>
+                            </button>
+                        </subviews>
                     </view>
-                    <navigationItem title="Title" id="4278" key="navigationItem"/>
+                    <navigationItem title="Title" id="8203" key="navigationItem"/>
+                    <connections>
+                        <outlet property="btnGo" destination="12031" id="name-outlet-12031"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4007" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5653" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="684" y="5"/>
+            <point key="canvasLocation" x="935" y="3"/>
         </scene>
     </scenes>
 </document>
